tests/stage2/t3_diagnostics/type_errors/continue_outside_loop.fuse
// EXPECTED ERROR:
// `continue` outside loop

@entrypoint
fn main() {
  continue
}
